Adiciona módulo e atualizações de configuração***
***Adiciona módulo 'WizproTools' e atualizações de configuração para o módulo 'modulo'.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Sinsitro</title>
+  <title>Modulo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,7 +15,7 @@
     <div id="header-faker"></div>
     <div id="aside-faker"></div>
     <div id="content-faker">
-      <wc-sinsitro-module></wc-sinsitro-module>
+      <wc-modulo-module></wc-modulo-module>
     </div>
   </main>
 </body>
